tests/testWorkflows/invalid_workflows/invalidActionWorkflow.playbook
{
    "name": "invalidActionWorkflow",
    "workflows": [
        {
            "name": "multiactionWorkflow",
            "branches": [
                {
                    "conditions": [
                        {
                            "action_name": "regMatch",
                            "app_name": "HelloWorldBounded",
                            "arguments": [
                                {
                                    "name": "regex",
                                    "value": "(.*)"
                                }
                            ],
                            "transforms": [
                                {
                                    "action_name": "length",
                                    "app_name": "HelloWorldBounded",
                                    "arguments": []
                                }
                            ]
                        }
                    ],
                    "destination_id": -2,
                    "source_id": -1,
                    "status": "Success"
                }
            ],
            "start": -1,
            "actions": [
                {
                    "action_name": "invalid",
                    "app_name": "HelloWorldBounded",
                    "arguments": [
                        {
                            "name": "call",
                            "value": "Hello World"
                        }
                    ],
                    "name": -2,
                    "id": -2,
                    "device_id": 1
                },
                {
                    "action_name": "helloWorld",
                    "app_name": "HelloWorldBounded",
                    "arguments": [],
                    "name": "start",
                    "id": -1,
                    "device_id": 1
                }
            ]
        }
    ]
}